WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297336
AppKitSPI.h causes build failure due to NSScrollPocket
https://bugs.webkit.org/show_bug.cgi?id=297336
Summary
AppKitSPI.h causes build failure due to NSScrollPocket
victor.vianna10
Reported
2025-08-13 09:36:44 PDT
Revision: fd72faeef0 Xcode version: 26 Beta 5 /Users/victorvianna/repos/WebKit/Source/WebKit/Platform/spi/mac/AppKitSPI.h:129:12: Cannot find interface declaration for 'NSScrollPocket' Given NSScrollPocket isn't publicly documented, I'm guessing it's a new API that isn't available in the public toolchain yet.
https://github.com/WebKit/WebKit/blob/406af9d4a91730657dd53fdf98dcffd9d4f21f65/Source/WebKit/Platform/spi/mac/AppKitSPI.h#L43
Attachments
Add attachment
proposed patch, testcase, etc.
victor.vianna10
Comment 1
2025-08-13 09:46:22 PDT
$ grep -r Pocket /Applications/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/AppKit.framework/Headers/ <nothing>
victor.vianna10
Comment 2
2025-08-13 09:48:37 PDT
Cross-linking, one more build issue:
https://bugs.webkit.org/show_bug.cgi?id=297329
Radar WebKit Bug Importer
Comment 3
2025-08-20 09:37:13 PDT
<
rdar://problem/158778411
>
adrian_taylor
Comment 4
2025-09-12 06:44:58 PDT
https://github.com/WebKit/WebKit/pull/50656
Elliott Williams
Comment 5
2025-09-15 17:30:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50778
victor.vianna10
Comment 6
2025-09-16 00:26:35 PDT
***
Bug 297329
has been marked as a duplicate of this bug. ***
EWS
Comment 7
2025-09-16 10:29:09 PDT
Committed
300040@main
(736f1346ebad): <
https://commits.webkit.org/300040@main
> Reviewed commits have been landed. Closing PR #50778 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug