Build on the public macOS 26 SDK https://bugs.webkit.org/show_bug.cgi?id=297336 rdar://158778411

Reviewed by Aditya Keerthi and Wenson Hsieh.

* Source/WebKit/Platform/cocoa/WKMaterialHostingSupport.swift: Import
  SwiftUI_SPI module as needed.
* Source/WebKit/Platform/spi/Cocoa/SwiftUI_SPI.swiftinterface: Added.
* Source/WebKit/Platform/spi/mac/AppKitSPI.h: Declare the NSScrollPocket
  interface we are using from AppKit SPI.
* Tools/TestWebKitAPI/Tests/TestWebKitAPI/mac/AppKitSPI.h: Ditto.

Canonical link: https://commits.webkit.org/300040@main